code/CLI/store/yaml/project-test/plateform-dev/k8s/plateforme-deployment-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: plateforme-deployment-01-deployment
spec:
    replicas: '2'
    selector:
        matchLabels:
            component: plateforme-deployment-01
    template:
        metadata:
            labels:
                component: plateforme-deployment-01
        spec:
            containers:
            -   args: python /app/plateforme/manage.py runserver 8000
                command: /bin/sh
                image: said10/plateforme
                name: plateforme
                ports:
                -   containerPort: '8000'
                volumeMounts:
                -   mountPath: /etc/app
                    name: media_volume
                    subPath: app
            volumes:
            -   name: media_volume
                persistentVolumeClaim:
                    claimName: media_volume-persistent-volume-claim
