code/CLI/store/yaml/project-test/plateform-dev/k8s/ingress-service-plateform-dev.yaml
annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service-plateform-dev
spec:
    rules:
    -   http:
            paths:
            -   backend:
                    serviceName: plateforme-deployment-01-cluster-ip-service
                    servicePort: '8000'
                path: /
            -   backend:
                    serviceName: plateforme-deployment-01-cluster-ip-service
                    servicePort: '80'
                path: /static/
            -   backend:
                    serviceName: plateforme-deployment-01-cluster-ip-service
                    servicePort: '80'
                path: /media/
